ODY-1036 Support null values in datatype transformation
git-svn-id: http://isdb1.offis.uni-oldenburg.de/repos/odysseus/trunk@26891 aa0bda67-78ed-0310-a382-c5338b0f89ba

Former-commit-id: 3a08dc0b99727090ccd375a6f8c7d17641c0660b