@@ -1,42 +1,42 @@
-/*******************************************************************************
+/**
  * Copyright 2016 The Odysseus Team
- * 
+ *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
  * You may obtain a copy of the License at
- * 
- *   http://www.apache.org/licenses/LICENSE-2.0
- * 
+ *
+ *     http://www.apache.org/licenses/LICENSE-2.0
+ *
  * Unless required by applicable law or agreed to in writing, software
  * distributed under the License is distributed on an "AS IS" BASIS,
  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  * See the License for the specific language governing permissions and
  * limitations under the License.
- ******************************************************************************/
+ */
 package de.uniol.inf.is.odysseus.mep.functions.transform;
 
 import de.uniol.inf.is.odysseus.core.sdf.schema.SDFDatatype;
-import de.uniol.inf.is.odysseus.mep.AbstractUnaryDiscreteInputFunction;
+import de.uniol.inf.is.odysseus.mep.AbstractUnaryBooleanInputFunction;
 
 /**
- * Converts a {@link SDFDatatype} NUMBER value into a {@link SDFDatatype} CHAR
- * value.
+ * Converts a {@link SDFDatatype} BOOLEAN value into a {@link SDFDatatype}
+ * DOUBLE value.
  * 
  * @author Christian Kuka <christian@kuka.cc>
- *
+ * 
  */
-public class ToCharFromNumberFunction extends AbstractUnaryDiscreteInputFunction<Character> {
+public class ToDoubleFromBooleanFunction extends AbstractUnaryBooleanInputFunction<Double> {
+
+	/**
+		 * 
+		 */
+	private static final long serialVersionUID = -1320858430375018327L;
 
 	/**
 	 * 
 	 */
-	private static final long serialVersionUID = 1956450848515723544L;
-
-	/**
-	 * 
-	 */
-	public ToCharFromNumberFunction() {
-		super("toChar", SDFDatatype.CHAR);
+	public ToDoubleFromBooleanFunction() {
+		super("toDouble", SDFDatatype.DOUBLE);
 	}
 
 	/**
@@ -44,12 +44,14 @@ public class ToCharFromNumberFunction extends AbstractUnaryDiscreteInputFunction
 	 * {@inheritDoc}
 	 */
 	@Override
-	public Character getValue() {
-		Number input = getInputValue(0);
+	public Double getValue() {
+		Boolean input = getInputValue(0);
 		if (input == null) {
 			return null;
 		}
-		return Character.valueOf((char) input.longValue());
+		if (input.booleanValue()) {
+			return new Double(1.0);
+		}
+		return new Double(0.0);
 	}
-
 }
